--- a/articles/7f343a33247102c13577.md
+++ b/articles/7f343a33247102c13577.md
@@ -1,6 +1,6 @@
 ---
 title: "trivyをAWS Lambdaで動かす"
-emoji: "😸"
+emoji: "🔍"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["trivy", "lambda", "AWS"]
 published: true
