--- a/articles/9b3993128f9f43.md
+++ b/articles/9b3993128f9f43.md
@@ -174,7 +174,7 @@ logger.With("record", record).Info("Got record")
 `zlog.Filter` インターフェースに従って実装したメソッドを使って、独自のフィルタを作成できます。必要なメソッドは以下の2つです。
 
 - `ReplaceString(s string) string`: 検査する値が `string` 型の場合にこのメソッドが呼び出されます。引数は検査する値、返り値は置き換えられる値になります。何もする必要がない場合は引数をそのまま返します。文字列の中から部分的に隠蔽したい、というケースを想定しています。
-- `ShouldMask(fieldName string, value interface{}, tag string) bool`: 検査する値のフィールド名、値そのもの、そして構造体に `zlog` のタグがついていればその情報が引数として渡されます。返り値が `false` の場合は何もせず、 `true` だった場合はそのフィールドが全て隠蔽されます。隠蔽された値は元の型によらず、全て `string` 型の `[filtered]` という値に置き換えられます。
+- `ShouldMask(fieldName string, value interface{}, tag string) bool`: 検査する値のフィールド名、値そのもの、そして構造体に `zlog` のタグがついていればその情報が引数として渡されます。返り値が `false` の場合は何もせず、 `true` だった場合はそのフィールドが全て隠蔽されます。隠蔽された値は元の型が `string` 型なら `[filtered]` という値に置き換えられ、それ以外の場合は空の値が入るようになります。
 
 ## 他の実装などとの比較
 
