--- a/articles/9b3993128f9f43.md
+++ b/articles/9b3993128f9f43.md
@@ -3,7 +3,7 @@ title: "Goでセキュアにロギングするzlog"
 emoji: "🔏"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["go", "logging"]
-published: false
+published: true
 ---
 
 **TL; DR**
