--- a/articles/a94734799f21ef.md
+++ b/articles/a94734799f21ef.md
@@ -6,6 +6,8 @@ topics: []
 published: false
 ---
 
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+
 - K8s [https://www.openpolicyagent.org/docs/latest/kubernetes-introduction/](https://www.openpolicyagent.org/docs/latest/kubernetes-introduction/)
 - Envoy [https://www.openpolicyagent.org/docs/latest/envoy-introduction/](https://www.openpolicyagent.org/docs/latest/envoy-introduction/)
 - Docker [https://www.openpolicyagent.org/docs/latest/docker-authorization/](https://www.openpolicyagent.org/docs/latest/docker-authorization/)
