--- a/articles/0b401a4be783e8.md
+++ b/articles/0b401a4be783e8.md
@@ -2,7 +2,7 @@
 title: "OPAのデプロイ・利用パターン"
 emoji: "🗂"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["OPA", "Rego"]
 published: false
 ---
 
