--- a/articles/ca51a5e5da72f4.md
+++ b/articles/ca51a5e5da72f4.md
@@ -2,7 +2,7 @@
 title: "Go言語によるRego runtimeの組み込み"
 emoji: "🕌"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["OPA", "Rego"]
 published: false
 ---
 
