--- a/articles/07525213a6c3ff.md
+++ b/articles/07525213a6c3ff.md
@@ -2,7 +2,7 @@
 title: "Regoチートシート"
 emoji: "👌"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["OPA", "Rego"]
 published: false
 ---
 
