--- a/articles/e7d158c6375ec3.md
+++ b/articles/e7d158c6375ec3.md
@@ -2,7 +2,7 @@
 title: "OPA/RegoのCI・CD"
 emoji: "🙆"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["OPA", "Rego"]
 published: false
 ---
 
