--- a/articles/f00d3ca12e4102.md
+++ b/articles/f00d3ca12e4102.md
@@ -2,7 +2,7 @@
 title: "OPAコマンドの利用"
 emoji: "🍣"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["OPA", "Rego"]
 published: false
 ---
 
