--- a/articles/f305204605a7cf.md
+++ b/articles/f305204605a7cf.md
@@ -2,7 +2,7 @@
 title: "OPAサーバをGCP Cloud Runへデプロイ"
 emoji: "📘"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["OPA", "Rego"]
 published: false
 ---
 
