Policy as Codeとは

--- a/articles/b0d3c7f7377609.md
+++ b/articles/b0d3c7f7377609.md
@@ -127,8 +127,8 @@ name_map = out {
 
 # 参考文献
 
-- [Some keyword](https://www.openpolicyagent.org/docs/latest/policy-language/#some-keyword)
-- [Membership and iteration: in](https://www.openpolicyagent.org/docs/latest/policy-language/#membership-and-iteration-in)
+- Some keyword: https://www.openpolicyagent.org/docs/latest/policy-language/#some-keyword
+- Membership and iteration `in`: https://www.openpolicyagent.org/docs/latest/policy-language/#membership-and-iteration-in
 
-[^iter]: 公式ドキュメントでは、これらの機能の総称は特にありません
+[^iter]: 公式ドキュメントでは、これらの機能の総称は特にないようです
 [^cannot_assign]: ちなみに `idx = x {...}` のルールで複数の異なる値を返そうとすると、同じ変数に複数回代入を試みたとみなされて失敗します
