Done チートシート

--- a/articles/07525213a6c3ff.md
+++ b/articles/07525213a6c3ff.md
@@ -6,99 +6,116 @@ topics: ["OPA", "Rego"]
 published: false
 ---
 
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
 
+今回の記事ではRegoによるルール表現のパターンをひたすら列挙していきます。
+
+# デバッグ
+
+## 値のチェック
+
+```rego
+r := input.user
+print(r)
+```
+
+## トレース
+
+explainオプションを有効化すると表示される。
+
+```rego
+trace(sprintf("x = %d", [x]))
+```
 
 # 文字列操作
 
 ## 整形
 
 ```rego
-output := sprintf(string, values)
+"blue 5" == sprintf("%s %d", ["blue", 5])
 ```
 
 ## 文字列の結合・分割
 ```rego
-output := concat(delimiter, array_or_set)
-output := split(string, delimiter)
+"red, yellow, blue" == concat(", ", ["red", "yellow", "blue"])
+["red", "yellow", "blue"] == split("red, yellow, blue", ", ")
 ```
 
 ## 部分一致
 ```rego
-contains(string, search)
-output := indexof(string, search)
-```
-
-## 前方一致・後方一致
-```rego
-endswith(string, search)
-startswith(string, search)
+contains("blue", "l")
+2 == indexof("blue", "u")
+startswith("blue", "bl")
+endswith("blue", "ue")
 ```
 
 ## 小文字化・大文字化
 ```rego
-output := lower(string)
-output := upper(string)
+"blue" == lower("BLUE")
+"BLUE" == upper("blue")
 ```
 
 ## 抜き出し
 ```rego
-output := substring(string, start, length)
+"blue!" == substring("the blue!?", 4, 5)
 ```
 
-## trim
+## 切り取り
 ```rego
-output := trim(string, cutset)
-output := trim_left(string, cutset)
-output := trim_prefix(string, prefix)
-output := trim_right(string, cutset)
-output := trim_suffix(string, suffix)
-output := trim_space(string)
+"blue" == trim("_blue!", "_!") # 第2引数は文字セット
+"blue" == trim_left("e__blue", "e_") # 第2引数は文字セット
+"blue" == trim_right("blue__b", "_b") # 第2引数は文字セット
+"blue" == trim_prefix("bblue", "b") # 第2引数は文字列
+"blue" == trim_suffix("bluee", "e") # 第2引数は文字列
+"blue" == trim_space("   blue   ")
 ```
 
 ## 正規表現の一致
 ```rego
-output := regex.match(pattern, value)
+regex.match("[a-z]+", "_blue_")
 ```
 
 # 配列・集合操作
 
 ## 結合（配列）
 ```rego
-output := array.concat(array, array)
+["blue", "yellow", "red"] == array.concat(["blue", "yellow"], ["red"])
 ```
 
 ## 抜き出し（配列）
 ```rego
-output := array.slice(array, startIndex, stopIndex)
+["yellow", "blue"] == array.slice(["red", "yellow", "blue"], 1, 3)
 ```
 
 ## 要素数（配列・集合）
 ```rego
-output := count(collection_or_string)
+3 == count(["red", "yellow", "blue"])
 ```
 
 ## 最大値・最小値・合計（配列・集合）
 
 ```rego
-output := max(array_or_set)
-output := min(array_or_set)
-output := sum(array_or_set)
+5 == max([3, 2, 5, 1, 4])
+1 == min([3, 2, 5, 1, 4])
+15 == sum([3, 2, 5, 1, 4])
 ```
 
 ## ソート（配列・集合）
 
-返り値は配列になる
+返り値は配列になります。
 
 ```rego
-output := sort(array_or_set)
+[1, 2, 3, 4, 5] == sort([3, 2, 5, 1, 4]) # array
+[1, 2, 3, 4, 5] == sort({3, 2, 5, 1, 4}) # set
+["blue", "red", "yellow"] == sort(["red", "yellow", "blue"])
 ```
 
 ## 積集合・和集合・差集合（集合）
 
 ```rego
-s3 := s1 & s2
-s3 := s1 | s2
-s3 := s1 - s2
+{"blue"} == {"blue", "red"} & {"orange", "blue"}
+{"blue", "red", "orange"} == {"blue", "red"} | {"orange", "blue"}
+{"blue"} == {"blue", "red"} - {"red"}
 ```
 
 # オブジェクト（マップ型）操作
@@ -106,38 +123,150 @@ s3 := s1 - s2
 ## 値の取得（デフォルト値を指定）
 
 ```rego
-value := object.get(object, key, default)
+dict := {
+    "white": 3,
+    "blue": 5,
+}
+1 == object.get(dict, "none", 1)
 ```
 
-## キーの取得
+## キーの集合の取得
 
 ```rego
+dict := {
+    "white": 3,
+    "blue": 5,
+}
+
+{"white", "blue"} == {x | dict[x]}
+```
+
+## 値の集合の取得
+
+```rego
+dict := {
+    "white": 3,
+    "blue": 5,
+}
+
+{3, 5} == {dict[x] | dict[x]}
 ```
 
 ## 特定キーの除外
 
 ```rego
-output := object.remove(object, keys)
+dict := {
+    "red": 2,
+    "white": 3,
+    "blue": 5,
+}
+
+{"blue": 5} == object.remove(dict, ["white", "red"])
 ```
 
 ## 特定キーを残す
 
 ```rego
-filtered := object.filter(object, keys)
+dict := {
+    "red": 2,
+    "white": 3,
+    "blue": 5,
+}
+
+{"blue": 5} == object.filter(dict, ["blue"])
 ```
 
 ## オブジェクトの合成
 
-```
-output := object.union(objectA, objectB)
+```rego
+obj1 := {
+    "white": 3,
+    "blue": 0,
+}
+obj2 := {
+    "red": 2,
+    "blue": 5,
+}
+
+{
+    "red": 2,
+    "white": 3,
+    "blue": 5, # 後勝ちでobj2が優先
+} == object.union(obj1, obj2)
 ```
 
 # マッチ
 
 ## 最低1つにマッチ
+
+### 配列
+
+```rego
+    arr := ["red", "blue", "yellow"]
+    "blue" == arr[_]
+```
+
+### オブジェクト型
+
+```rego
+    obj := {
+        "red": 2,
+        "white": 3,
+        "blue": 5,
+    }
+    5 == obj[_]
+```
+
 ## 全部にマッチ
 
-# 同構造体の2値が一致
-# JOIN
+### 配列
 
+```rego
+arr := [1, 1, 1]
+3 == count([x | arr[x] == 1])
+```
 
+### オブジェクト型
+
+```rego
+obj := {
+    "red": 1,
+    "yellow": 1,
+    "blue": 1,
+}
+3 == count([x | obj[x] == 1])
+```
+
+## JOIN
+
+```rego
+users = [
+    {
+        "name": "alice",
+        "id": 1,
+    },
+    {
+        "name": "bob",
+        "id": 2,
+    },
+]
+assigns = [
+    {
+        "id": 1,
+        "role": "admin",
+    },
+    {
+        "id": 1,
+        "role": "reader",
+    },
+    {
+        "id": 2,
+        "role": "reader",
+    },
+]
+
+some x, y
+users[x].name == "alice"
+assigns[y].id == users[x].id
+assigns[y].role == "admin"
+```
