--- a/articles/69553e82b34c20.md
+++ b/articles/69553e82b34c20.md
@@ -12,7 +12,17 @@ published: false
 
 # OPA/Regoとは
 
-OPAはサービスやソフトウェアの意思決定機能を本体と分離するために作られたエンジンです。ここで言う「意思決定」とは「どの主体が何をできるか」を判断する認可の判断だけでなく、設定の不備や組織内で禁止された設定の検出、デプロイ可否の判断、検出したイベントに対してどのような対応をするかの判断、といったことまで応用可能です。[Kubernetesでの活用事例](https://github.com/open-policy-agent/gatekeeper)が有名ですが、それ以外の幅広いプロダクトや環境でも利用可能です。
+OPAはサービスやソフトウェアの意思決定機能を本体と分離するために作られたエンジンです。ここで言う「意思決定」とはいわゆる認可の話だけではなく、様々なことに応用できます。
+
+- Infrastructure as Code で記述された設定に危険な構成（例えばアクセス制御が適切でない）のチェック
+- デプロイされたリソースがポリシーに準拠した設定・構成になっているかのチェック
+- セキュリティスキャンで検出された結果に対して、独自の深刻度を判定する
+- Webサービスなどで、どのロールのユーザがどのリソースにアクセスできるか判定する
+- 作成したリソースの種類、設定、所有者などのメタ情報から、リソースの重要度を判定する
+
+上記の通り「あるひとかたまりの入力データに対して、1つの判断結果を出力する」というようなシンプルな判定処理であればほとんどのユースケースに対応できます。情報セキュリティ以外の分野にも利用できると思いますが、こういった「判断」が情報セキュリティの分野でよく求められるため、その領域で注目されています。
+
+逆にインタラクティブややりとりが発生するような処理や、状態を維持しながら処理するなどはOPAの苦手とする領域であり、一般的な手続き型プログラミング言語を用いて実現するほうが良いです。
 
 ## 具体的な機能
 
