--- a/articles/759d47f17ebd2e.md
+++ b/articles/759d47f17ebd2e.md
@@ -1,5 +1,5 @@
 ---
-title: "OPAをAWS Lambdaへデプロイ"
+title: "OPAをAWS Lambdaへデプロイ（ポリシー埋め込み）"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["OPA", "Rego", "aws", "cdk", "go"]
