--- a/articles/1311288523dad2.md
+++ b/articles/1311288523dad2.md
@@ -1,8 +1,8 @@
 ---
-title: "OPA/RegoのCI・CD"
-emoji: "🙆"
+title: "ポリシーを共有するためのGitHub Actionを作る"
+emoji: "🦔"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["opa", "rego"]
+topics: ["opa", "rego", "trivy", "githubactions"]
 published: false
 ---
 
