--- a/articles/1755527e782183.md
+++ b/articles/1755527e782183.md
@@ -1,8 +1,8 @@
 ---
-title: "OPA/Regoの応用"
+title: "OPA/Regoの応用（SOAR）"
 emoji: "🔖"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego"]
+topics: ["opa", "rego"]
 published: false
 ---
 
