--- a/articles/69553e82b34c20.md
+++ b/articles/69553e82b34c20.md
@@ -2,7 +2,7 @@
 title: "OPA/Rego概論"
 emoji: "👌"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego"]
+topics: ["opa", "rego"]
 published: false
 ---
 
