--- a/articles/759d47f17ebd2e.md
+++ b/articles/759d47f17ebd2e.md
@@ -2,7 +2,7 @@
 title: "OPAをAWS Lambdaへデプロイ（ポリシー埋め込み）"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego", "aws", "cdk", "go"]
+topics: ["opa", "rego", "aws", "cdk", "go"]
 published: false
 ---
 
