--- a/articles/752b9234af7cc8.md
+++ b/articles/752b9234af7cc8.md
@@ -2,7 +2,7 @@
 title: "PolicyとData"
 emoji: "📘"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego"]
+topics: ["opa", "rego"]
 published: false
 ---
 
