--- a/articles/a94734799f21ef.md
+++ b/articles/a94734799f21ef.md
@@ -2,7 +2,7 @@
 title: "OPAの活用事例"
 emoji: "👏"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego"]
+topics: ["opa", "rego"]
 published: false
 ---
 
