--- a/articles/c24085137ca798.md
+++ b/articles/c24085137ca798.md
@@ -2,7 +2,7 @@
 title: "Regoの基礎（結果の出力編）"
 emoji: "💭"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego"]
+topics: ["opa", "rego"]
 published: false
 ---
 
