--- a/articles/e9d202332a64c9.md
+++ b/articles/e9d202332a64c9.md
@@ -2,7 +2,7 @@
 title: "OPAサーバの運用"
 emoji: "🗂"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["OPA", "Rego"]
+topics: ["opa", "rego"]
 published: false
 ---
 
