Publish AdvCal 2021 3rd day

--- a/articles/752b9234af7cc8.md
+++ b/articles/752b9234af7cc8.md
@@ -1,5 +1,5 @@
 ---
-title: "PolicyとData"
+title: "Regoの基礎（PolicyとData）"
 emoji: "📘"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego"]
