Publish AdvCal 2021 5th day

--- a/articles/759d47f17ebd2e.md
+++ b/articles/759d47f17ebd2e.md
@@ -1,5 +1,5 @@
 ---
-title: "OPAをAWS Lambdaへデプロイ（ポリシー埋め込み）"
+title: "OPAをAWS Lambdaへデプロイ"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "aws", "cdk", "go"]
