--- a/articles/89ce7831c245ef.md
+++ b/articles/89ce7831c245ef.md
@@ -8,4 +8,11 @@ published: false
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
 
-# 読み込めてないパターン
+# デバッグに使える機能
+
+## print
+
+## trace
+
+# デバッグのためのコツ
+
