Publish AdvCal 2021 6th day

--- a/articles/b0d3c7f7377609.md
+++ b/articles/b0d3c7f7377609.md
@@ -1,12 +1,12 @@
 ---
 title: "Regoの基礎（イテレーション編）"
-emoji: "🐙"
+emoji: "🔄"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego"]
-published: false
+published: true
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の6日目です。
 
 今回は構造データの検査・操作に必要となるRegoのイテレーションの方法について説明します。
 
