Publish AdvCal 2021 8th day

--- a/articles/075920f4a0529e.md
+++ b/articles/075920f4a0529e.md
@@ -1,12 +1,12 @@
 ---
 title: "Regoの基礎（Safety）"
-emoji: "🐕"
+emoji: "👷"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego"]
-published: false
+published: true
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の8日目です。
 
 今回はRegoでポリシーを記述する際にはまりがちな "Safety" の概念について解説します（[公式ドキュメント](https://www.openpolicyagent.org/docs/latest/faq/#safety)）。
 
@@ -169,7 +169,10 @@ result[y] {
 
 普通に式をちゃんと整理すればOKです。
 
-# デバッグのためのtips
+# まとめ
+
+最初は混乱しがちなunsafeエラーですが、基本的には「`not` キーワードを含む式以外で変数を定義した上で使う」ということで回避できることがほとんどです。エラーに遭遇した際はまずその観点でチェックしてみることをお勧めします。
 
 [^values]: ポリシーだけで完結する場合は `not` を使っても値が収束する可能性はあるのですが、それでも外部から `with` キーワードなどでデータをinjectすることが可能なため、すべからく `not` だけでの変数定義を禁止していると思われます。
 [^low_bar]: 説明の流れ上 `x` を置いていますが、本来このように他に影響しないイテレーションをしたい場合は `_` にするほうが明示的です。ただし、`_` でも同様にunsafeエラーになります。
+
