Publish AdvCal 2021 9th day

--- a/articles/85c9992f601068.md
+++ b/articles/85c9992f601068.md
@@ -1,9 +1,9 @@
 ---
 title: "Regoのテスト"
-emoji: "🦁"
+emoji: "✅"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["opa", "rego"]
-published: false
+topics: ["opa", "rego", "test"]
+published: true
 ---
 
 [Policy as Codeとは]()の記事でも述べたとおり、ポリシーをコードで記述する大きなメリットの1つがテスト可能になることです。シンプルで少ないポリシーだけを運用しているうちはいいですが、ポリシーが複雑化・巨大化することによって記述した内容が意図したとおりに動作するか、あるいは新たに追加・修正したことで既存のポリシーに影響を及ぼしていないかを確認するコストが肥大化していきます。
