Publish AdvCal 2021 10th day

--- a/articles/07525213a6c3ff.md
+++ b/articles/07525213a6c3ff.md
@@ -3,7 +3,7 @@ title: "Regoチートシート"
 emoji: "👌"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego"]
-published: false
+published: true
 ---
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
