--- a/articles/07525213a6c3ff.md
+++ b/articles/07525213a6c3ff.md
@@ -6,7 +6,7 @@ topics: ["opa", "rego"]
 published: true
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の10日目です。
 
 今回の記事ではRegoによるルール表現のパターンをひたすら列挙していきます。
 
