Publish AdvCal 2021 11th day

--- a/articles/89ce7831c245ef.md
+++ b/articles/89ce7831c245ef.md
@@ -6,7 +6,7 @@ topics: ["opa", "rego"]
 published: false
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の11日目です。
 
 # デバッグに使える機能
 
