--- a/articles/89ce7831c245ef.md
+++ b/articles/89ce7831c245ef.md
@@ -1,6 +1,6 @@
 ---
 title: "Regoのデバッグ (trace/print)"
-emoji: "😺"
+emoji: "🐛"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "debug"]
 published: true
