Publish AdvCal 2021 15th day

--- a/articles/0b401a4be783e8.md
+++ b/articles/0b401a4be783e8.md
@@ -1,16 +1,16 @@
 ---
 title: "OPAのデプロイアーキテクチャ例"
-emoji: "🗂"
+emoji: "🚚"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["opa", "rego"]
-published: false
+topics: ["opa", "rego", "aws", "lambda", "ecs"]
+published: true
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の15日目です。
 
 OPAは様々な利用形態がありますが、複数のサービスなどから1つのポリシー群を参照したいなどのケースでは実行用の環境をクラウドなどへデプロイする場合があります。
 
-今回はOPAを実際に利用する際、どのようなデプロイのパターンがあるかについて解説したいと思います。筆者の経験からAWSをベースに紹介したいと思います。
+今回はOPAをクラウド環境などで実際に利用する際、どのようなデプロイのパターンがあるかについて解説したいと思います。今回は特定のプロダクトに依存せず、汎用的なアーキテクチャを考えています。筆者の経験からAWSをベースに紹介したいと思います。
 
 # パターン1) ポリシーを実行用のアセットに同梱する
 
