Publish AdvCal 2021 16th day

--- a/articles/ca51a5e5da72f4.md
+++ b/articles/ca51a5e5da72f4.md
@@ -2,11 +2,11 @@
 title: "Go言語によるRego runtimeの組み込み"
 emoji: "🕌"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["opa", "rego"]
+topics: ["opa", "rego", "go"]
 published: false
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の16日目です。
 
 今回はGo言語からRegoのruntimeを呼び出し、ポリシーの評価結果を求める手順について解説します。
 
