--- a/articles/ca51a5e5da72f4.md
+++ b/articles/ca51a5e5da72f4.md
@@ -1,6 +1,6 @@
 ---
 title: "Go言語によるRego runtimeの組み込み"
-emoji: "🕌"
+emoji: "🐹"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "go"]
 published: false
