Publish AdvCal 2021 16th day (retake)

--- a/articles/ca51a5e5da72f4.md
+++ b/articles/ca51a5e5da72f4.md
@@ -3,7 +3,7 @@ title: "Go言語によるRego runtimeの組み込み"
 emoji: "🐹"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "go"]
-published: false
+published: true
 ---
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の16日目です。
