Publish AdvCal 2021 17th day

--- a/articles/759d47f17ebd2e.md
+++ b/articles/759d47f17ebd2e.md
@@ -1,12 +1,12 @@
 ---
 title: "OPAをAWS Lambdaへデプロイ"
-emoji: "🎉"
+emoji: "🚶"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "aws", "cdk", "go"]
-published: false
+published: true
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の17日目です。
 
 今回はOPAの機能をAWS Lambdaで実装する方法について紹介します。
 
