--- a/articles/f305204605a7cf.md
+++ b/articles/f305204605a7cf.md
@@ -1,9 +1,122 @@
 ---
 title: "OPAサーバをGCP Cloud Runへデプロイ"
-emoji: "📘"
+emoji: "🌥️"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["opa", "rego"]
+topics: ["opa", "rego", "gcp", "cloudrun"]
 published: false
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の18日目です。今回はOPAサーバをGoogle CloudのCloud Run上にデプロイするような設定、リポジトリ管理、CIの事例について紹介したいと思います。
+
+[OPAのデプロイアーキテクチャ例](https://zenn.dev/mizutani/articles/0b401a4be783e8) でコンテナイメージを用いてECSへデプロイするパターンを紹介しましたが、構成としてはECSをCloud Runに置き換えただけと考えていただければと思います。また、ポリシーについてはバージョン管理の容易さや、ポリシーとサーバを疎結合にしないようにするという観点からコンテナイメージにポリシーを埋め込むというアプローチになります。
+
+# 構成
+
+まず、今回の構成例について全体像を簡単に説明します。
+
+![](https://storage.googleapis.com/zenn-user-upload/0e9ec92c9299-20211217.jpg)
+
+1. GitHub上にリポジトリを作成し、そこにポリシーやコンテナイメージの構成に必要なデータ、そしてCIに必要な情報を格納する
+2. GitHub Actionsによってテスト＆イメージをビルドし、その後そのままCloud Runへデプロイ
+3. 他のGitHub ActionsやサービスからCloud Runへアクセスすることで、CIの判定や認可の判定に利用できる。
+
+この構成はサービスごとにOPAサーバを細かく分けてデプロイするのではなく、組織などで横断して一定まとめてポリシーを管理することを想定しています。
+
+# ディレクトリ構成
+
+```
+├── Dockerfile
+├── README.md
+├── config.yml
+└── policy
+    ├── system
+    │   ├── authz.rego
+    │   └── authz_test.rego
+    └── trivy
+        ├── policy.rego
+        ├── policy_test.rego
+        └── testdata
+            └── vuln_deny_list
+                ├── fail
+                │   └── data.json
+                └── pass
+                    └── data.json
+```
+
+実際のデータは以下のリポジトリにあるので、ご参照ください。
+https://github.com/m-mizutani/opa-server
+
+
+ディレクトリに置かれているものは大きく分けて2つです。
+
+- イメージのビルドやデプロイに必要なもの：Dockerfile, config.ymlなど
+- ポリシーおよびテストに必要なデータ：`./policy` 以下
+
+`opa` はポリシーにアクセスする際のパスは `package` で定義された内容のみに依存しディレクトリ構成には影響されないのですが、データ用のファイルはディレクトリ構造のみに依存します。したがってポリシーのみの構成であれば問題ないのですが、大きなJSONなど構造データをテストに使いたい場合や、巨大な許可・拒否リストなどをデータで管理したい場合は、なるべく慎重にディレクトリ構成を検討するのがおすすめです。
+
+今回の構成は今現在での筆者のベストプラクティスです。まずポリシーファイルは `./policy` をルートディレクトリとして構成します。ルートディレクトリであることは `opa test ./policy` や `opa eval -b ./policy` のようにディレクトリ指定するとルートディレクトリと扱われます。
+
+`./policy` 以下にはプロジェクトやサービスごとにもう一段フォルダを作成し、その中にポリシーやデータをおきます。これによってそのフォルダごとに[code owner](https://docs.github.com/ja/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners)を設定することで、PRマージの承認・拒否の権限がある人を管理しやすくなります。
+
+また、先述の通りRegoはパッケージ名とディレクトリ構造が全く関連しないため、様々なパッケージ名が混在するような構成にできてしまいます。自由度が高い反面、同じ名前空間のポリシーがどこにあるのかわかりにくくなってしまうため、Goのように同じディレクトリに同じパッケージのポリシーを配置するのが良さそうと考えています。
+
+# ローカルでデバッグ＆テスト
+
+この構成だと以下のように手元でテストできます。
+
+```bash
+$ opa test -v ./policy
+data.system.authz.test_allow_get: PASS (1.2505ms)
+data.system.authz.test_allow_post: PASS (94.583µs)
+data.system.authz.test_disallow_method: PASS (70.292µs)
+data.system.authz.test_disallow_path: PASS (76.708µs)
+data.system.authz.test_authz: PASS (216.875µs)
+data.trivy.test_vuln_deny_list: PASS (666.375µs)
+--------------------------------------------------------------------------------
+PASS: 6/6
+```
+
+また、CLIで実行結果を試したい場合は `eval` コマンドでより手軽に確認することもできます。
+
+```bash
+$ opa eval -f pretty -b ./policy/ data.trivy.fail -i ./policy/trivy/testdata/vuln_deny_list/fail/data.json
+[
+  "GHSA-g2q5-5433-rhrf is really critical, prohibited to deploy"
+]
+```
+
+# GitHub ActionsでのCI
+
+## テスト
+
+```yaml
+name: Test OPA policy
+
+on:
+  push:
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: docker://openpolicyagent/opa:0.35.0-rootless
+        with:
+          args: "test -v ./policy"
+```
+https://github.com/m-mizutani/opa-server/blob/main/.github/workflows/build.yml
+
+```yaml
+      - run: |
+          gcloud beta run deploy "${SERVICE_ID}" \
+            --project="${GCP_PROJECT_ID}" \
+            --image "${GCP_IMAGE_NAME}" \
+            --region="${CLOUD_RUN_REGION}" \
+            --platform="managed" \
+            --cpu=1  \
+            --memory=512Mi \
+            --port 8181 \
+            --allow-unauthenticated \
+            --ingress=all \
+            --service-account="opa-server@mztn-opa-service.iam.gserviceaccount.com"
+```
