Publish AdvCal 2021 18th day

--- a/articles/f305204605a7cf.md
+++ b/articles/f305204605a7cf.md
@@ -1,9 +1,9 @@
 ---
-title: "OPAサーバをGCP Cloud Runへデプロイ"
+title: "OPAサーバをGCP Cloud Runで利用するリポジトリ構成や設定"
 emoji: "🌥️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "gcp", "cloudrun"]
-published: false
+published: true
 ---
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の18日目です。今回はOPAサーバをGoogle CloudのCloud Run上にデプロイするような設定、リポジトリ管理、CIの事例について紹介したいと思います。
@@ -58,6 +58,8 @@ https://github.com/m-mizutani/opa-server
 
 `./policy` 以下にはプロジェクトやサービスごとにもう一段フォルダを作成し、その中にポリシーやデータをおきます。これによってそのフォルダごとに[code owner](https://docs.github.com/ja/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners)を設定することで、PRマージの承認・拒否の権限がある人を管理しやすくなります。
 
+例の中では `system`、`trivy` という個別のプロジェクト用ディレクトリがあります。`trivy` は[Trivy](https://github.com/aquasecurity/trivy)のスキャン結果を渡すとCIの成功・失敗を制御するためのポリシーです。同じようなディレクトリをプロジェクトやサービスごとに増やしていくイメージです。一方 `system` はOPAサーバのためのポリシーを配置しています。[ポリシー記述例の記事](https://zenn.dev/mizutani/articles/a8ce41c66a2fcc)でも解説しましたが、OPAはサーバとして動かす際に `--authorization=basic` というオプションをつけることで、 `system.authz` パッケージによってHTTPアクセスを制御できます。
+
 また、先述の通りRegoはパッケージ名とディレクトリ構造が全く関連しないため、様々なパッケージ名が混在するような構成にできてしまいます。自由度が高い反面、同じ名前空間のポリシーがどこにあるのかわかりにくくなってしまうため、Goのように同じディレクトリに同じパッケージのポリシーを配置するのが良さそうと考えています。
 
 # ローカルでデバッグ＆テスト
@@ -85,11 +87,38 @@ $ opa eval -f pretty -b ./policy/ data.trivy.fail -i ./policy/trivy/testdata/vul
 ]
 ```
 
+# Dockerfile
+
+```dockerfile:Dockerfile
+FROM openpolicyagent/opa:0.35.0-rootless
+
+COPY policy /policy
+COPY config.yml /
+
+ENTRYPOINT [ \
+    "/opa", "run", "-s", \
+    "-c", "config.yml", \
+    "--authorization", "basic", \
+    "--ignore", "testdata", \
+    "--ignore", "*_test.rego", \
+    "/policy" \
+]
+```
+
+コンテナイメージをビルドするための `Dockerfile` はOPAが公式に提供しているコンテナイメージ（上記例では `opa:0.35.0-rootless` ）をベースに、ポリシーおよび設定をコピーして利用しています。オプションで `testdata` （ディレクトリ）および `_test.rego` （テスト用コード）を無視することでテスト関連のものが本番にデプロイされないようにしています。
+
+設定ファイル `config.yml` ではログの出力形式についてのみ指定しています。
+
+```yml:config.yml
+decision_logs:
+  console: true
+```
+
 # GitHub ActionsでのCI
 
 ## テスト
 
-```yaml
+```yaml:.github/workflows/test.yml
 name: Test OPA policy
 
 on:
@@ -104,9 +133,18 @@ jobs:
         with:
           args: "test -v ./policy"
 ```
+
+GitHub Actions上のテストではOPAのcontainer imageを使うのが便利です。特に利用するバージョンをDockerfileと合わせることで、テストとデプロイの結果を整合させることができます。
+
+## ビルド・デプロイ
+
+デプロイに関する部分についてはGCP・Cloud Runの設定が多くなってしまうため、この記事では詳しくは振れません。以下にビルドおよびデプロイのAction用ワークフローがあるので、興味のある方はこちらを参照してみてください。
+
 https://github.com/m-mizutani/opa-server/blob/main/.github/workflows/build.yml
 
-```yaml
+ここではCloud Runの設定に関する部分だけ解説したいと思います。
+
+```yaml:.github/workflows/build.yml
       - run: |
           gcloud beta run deploy "${SERVICE_ID}" \
             --project="${GCP_PROJECT_ID}" \
@@ -120,3 +158,64 @@ https://github.com/m-mizutani/opa-server/blob/main/.github/workflows/build.yml
             --ingress=all \
             --service-account="opa-server@mztn-opa-service.iam.gserviceaccount.com"
 ```
+
+上記がデプロイ用のstepです。
+
+```yml
+--cpu=1  \
+--memory=512Mi \
+```
+
+まず性能についてですが、opa自体が非常に軽量に動作するのでよほど高頻度にアクセスする、あるいは重いポリシーを評価させるなどでない限り、CPU・メモリを潤沢に割り当てる必要はなさそうです。筆者は念の為512MBメモリを割り当てていますが、もっと少なくても問題なさそうです。
+
+```yml
+--allow-unauthenticated \
+--ingress=all \
+```
+
+ネットワークの設定についてはユースケースに合わせて考える必要があります。
+
+- ユースケース1: 外部からポリシーを評価したく、内容に秘匿性はない。ただしポリシーの変更などはさせない
+    - `--allow-unauthenticated` であらゆるリクエストを受け付ける
+    - `--ingress=all` であらゆる通信を受け付ける
+    - `system.authz` パッケージで不要な操作を禁止する
+- ユースケース2: 外部からポリシーを評価したいが信頼する相手からのアクセスのみ受け付けたい
+    - `--no-allow-unauthenticated` でリクエストには権限のあるアカウントのトークンが必要にする。トークンは `gcloud auth print-identity-token` などで取得したものをリクエストヘッダに付与する
+    - `--ingress=all` であらゆる通信を受け付ける
+- ユースケース3: 内部ネットワークからポリシーを評価したいが都度認証したくない
+    - `--allow-unauthenticated` であらゆるリクエストを受け付ける
+    - `--ingress=internal` であらゆる通信を受け付ける
+
+# サンプル
+
+https://github.com/m-mizutani/opa-server
+
+上記リポジトリによってデプロイされたOPAサーバは実際にGCPへデプロイされています。
+
+```bash
+$ curl https://opa-server-h6tk4k5hyq-an.a.run.app/v1/data
+```
+
+とすることで `data` を参照することができます。
+
+```bash
+$ curl https://opa-server-h6tk4k5hyq-an.a.run.app/v1/data -d '{
+    "input": {
+        "Results": [
+            {
+                "Vulnerabilities": [
+                    {
+                        "VulnerabilityID": "GHSA-g2q5-5433-rhrf"
+                    }
+                ]
+            }
+        ]
+    }
+}'
+```
+
+というリクエストを送ることでTrivy用のポリシーに引っ掛けることもできます。
+
+# まとめ
+
+今回はOPAサーバを1つのリポジトリで管理しCloud Runにデプロイするパターンの事例を紹介しました。筆者もまだ使い始めたばかりでベストプラクティスといえるほどには成熟していないため、今後も検討を続けたいと思います。
