--- a/articles/1311288523dad2.md
+++ b/articles/1311288523dad2.md
@@ -2,8 +2,8 @@
 title: "ポリシーを共有するためのGitHub Actionを作る"
 emoji: "🦔"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["opa", "rego", "trivy", "githubactions"]
+topics: ["opa", "rego", "githubactions"]
 published: false
 ---
 
-この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)のN日目です。
+この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の21日目です。
