--- a/articles/1311288523dad2.md
+++ b/articles/1311288523dad2.md
@@ -1,5 +1,5 @@
 ---
-title: "ポリシーを共有するためのGitHub Actionを作る"
+title: "GitHub Actionsでの結果をOPAサーバに問い合わせる"
 emoji: "🦔"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["opa", "rego", "githubactions"]
@@ -7,3 +7,4 @@ published: false
 ---
 
 この記事は[OPA/Regoアドベントカレンダー](https://adventar.org/calendars/6601)の21日目です。
+
